# HueControl

./: Cargo.toml
src/: main.rs  setup_mdns.rs
src/CRUD/: persistence.rs  table_existence.rs
src/communication/: discovery.rs
src/crud/: auth_token.rs  mod.rs  table.rs
src/setup/: hue_bridge.rs  hue_call_dns.rs  mod.rs  setup_hue.rs
