[package]
name = "HueControl"
version = "0.1.0"
edition = "2024"

[dependencies]
mdns-sd = "0.13.9"
reqwest = "0.12.15"
rusqlite = { version = "0.35.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
